# GradeMaler

./: .gitignore  README.md  email_template.txt  pyproject.toml  send_grades.py
