[project]
name = "grade-mailer"
version = "0.1.0"
description = "Send course grades from Google Sheets through Gmail API."
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.0.0,<3.0.0",
    "google-auth>=2.0.0,<3.0.0",
    "google-auth-oauthlib>=1.2.0,<2.0.0",
    "gspread>=6.0.0,<7.0.0",
]

[tool.uv]
package = false
